--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,3 +31,11 @@
     transform: rotate(360deg);
   }
 }
+
+.container{
+  margin: 80px auto 0 auto;
+  max-width: 1200px;
+}
+.nav-container {
+  margin: auto;
+}
